tests/cases/compiler-development/artifact/errors/diagnostic-generic-inference-conflict.diagnostic
diagnostic error code=T0001 family=type message="generic type 'T' inferred as both i64 and bool" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/generics/errors/generic-inference-conflict.ari" display="tests/cases/generics/errors/generic-inference-conflict.ari" bytes=104
  Label index=0 role=primary source_id=0 source="tests/cases/generics/errors/generic-inference-conflict.ari" line=6 column=10 end_line=6 end_column=16 byte_start=85 byte_end=91 message=""
  Snippet label=0 text="  --> tests/cases/generics/errors/generic-inference-conflict.ari:6:10\n   |\n 6 |   return choose(1, true);\n   |          ^^^^^^"
